--- a/src/app/auth/pages/login-page/login-page.component.html
+++ b/src/app/auth/pages/login-page/login-page.component.html
@@ -6,13 +6,13 @@
     <form [formGroup]="loginForm" autocomplete="off">
       <div class="mb-3">
         <label for="txtUsername" class="form-label">Username:</label>
-        <input type="text" class="form-control" id="txtUsername" />
+        <input formControlName="username" type="text" class="form-control" id="txtUsername" />
       </div>
       <div class="mb-3">
         <label for="txtPassword" class="form-label">Password</label>
-        <input type="password" class="form-control" id="txtPassword" />
+        <input formControlName="password" type="password" class="form-control" id="txtPassword" />
       </div>
-      <button (click)="login()" type="submit" class="btn btn-primary">Login</button>
+      <button [disabled]="loginForm.invalid" (click)="login()" type="submit" class="btn btn-primary">Login</button>
     </form>
   </div>
 </section>
