--- a/src/app/auth/pages/login-page/login-page.component.html
+++ b/src/app/auth/pages/login-page/login-page.component.html
@@ -3,7 +3,7 @@
     <div class="mb-4">
       <p class="text-primary fw-bold fs-3">Login</p>
     </div>
-    <form [formGroup]="loginForm" autocomplete="off">
+    <form (ngSubmit)="login()" [formGroup]="loginForm" autocomplete="off">
       <div class="mb-3">
         <label for="txtUsername" class="form-label">Username:</label>
         <input formControlName="username" type="text" class="form-control" id="txtUsername" />
@@ -12,7 +12,7 @@
         <label for="txtPassword" class="form-label">Password</label>
         <input formControlName="password" type="password" class="form-control" id="txtPassword" />
       </div>
-      <button [disabled]="loginForm.invalid" (click)="login()" type="submit" class="btn btn-primary">Login</button>
+      <button [disabled]="loginForm.invalid" type="submit" class="btn btn-primary">Login</button>
     </form>
   </div>
 </section>
