--- a/src/app/dashboard/components/navbar/navbar.component.html
+++ b/src/app/dashboard/components/navbar/navbar.component.html
@@ -13,9 +13,9 @@
           <a class="nav-link" routerLink="/dashboard/user" routerLinkActive="active">Create User</a>
         </li>
       </ul>
-      <form class="d-flex" role="search">
-        <button (click)="logout()" class="btn btn-outline-success" type="submit">Logout</button>
-      </form>
+      <div class="d-flex" role="search">
+        <button (click)="logout()" class="btn btn-outline-success" type="button">Logout</button>
+      </div>
     </div>
   </div>
 </nav>
