--- a/src/app/dashboard/components/navbar/navbar.component.html
+++ b/src/app/dashboard/components/navbar/navbar.component.html
@@ -1,21 +1,52 @@
-<nav class="navbar navbar-expand-lg bg-body-tertiary">
-  <div class="container-fluid">
-    <a class="navbar-brand" routerLink="/dashboard/home">APP</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
+<mat-sidenav-container fullscreen>
+  <mat-sidenav #sidenav>
+    <mat-toolbar>
+      <mat-toolbar-row>
+        <mat-icon>menu</mat-icon>
+        <mat-nav-list>
+          <a mat-list-item (click)="sidenav.toggle()">
+            <span>Menu</span>
+          </a>
+        </mat-nav-list>
+      </mat-toolbar-row>
+    </mat-toolbar>
+    <mat-toolbar-row>
+      <mat-icon>home</mat-icon>
+      <mat-nav-list>
+        <a
+          mat-list-item
+          routerLink="/dashboard/home"
+          (click)="sidenav.toggle()"
+        >
+          <span>Home</span>
+        </a>
+      </mat-nav-list>
+    </mat-toolbar-row>
+    <mat-toolbar-row>
+      <mat-icon>add</mat-icon>
+      <mat-nav-list>
+        <a
+          mat-list-item
+          routerLink="/dashboard/user"
+          (click)="sidenav.toggle()"
+        >
+          <span>Create User</span>
+        </a>
+      </mat-nav-list>
+    </mat-toolbar-row>
+  </mat-sidenav>
+  <mat-toolbar color="primary">
+    <button (click)="sidenav.toggle()" mat-icon-button>
+      <mat-icon>menu</mat-icon>
     </button>
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        <li class="nav-item">
-          <a class="nav-link" routerLink="/dashboard/home" routerLinkActive="active">Home</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" routerLink="/dashboard/user" routerLinkActive="active">Create User</a>
-        </li>
-      </ul>
-      <div class="d-flex" role="search">
-        <button (click)="logout()" class="btn btn-outline-success" type="button">Logout</button>
-      </div>
+    <span class="title">Auth APP</span>
+    <span class="spacer"></span>
+    <div>
+      <button (click)="logout()" mat-button>Logout</button>
     </div>
-  </div>
-</nav>
+  </mat-toolbar>
+
+  <main class="container mt-5">
+    <router-outlet></router-outlet>
+  </main>
+</mat-sidenav-container>
