--- a/src/app/auth/pages/login-page/login-page.component.html
+++ b/src/app/auth/pages/login-page/login-page.component.html
@@ -1,38 +1,29 @@
 <section class="min-vh-100 d-flex justify-content-center align-items-center">
   <div>
     <div class="mb-4">
-      <p class="text-primary fw-bold fs-3">Login</p>
+      <p class="text-primary fw-bold fs-3 text-center">Login</p>
     </div>
     <form (ngSubmit)="login()" [formGroup]="loginForm" autocomplete="off">
       <div class="mb-3">
-        <label for="txtUsername" class="form-label">Username:</label>
-        <input
-          formControlName="username"
-          type="text"
-          class="form-control"
-          [class.is-invalid]="isFieldInvalid('username')"
-          id="txtUsername"
-        />
-        <div class="invalid-feedback">El campo es requerido</div>
+        <mat-form-field appearance="fill">
+          <mat-label>Username</mat-label>
+          <input matInput placeholder="pepe123" formControlName="username" required>
+          <mat-error *ngIf="isFieldInvalid('username')">El campo es requerido</mat-error>
+        </mat-form-field>
       </div>
       <div class="mb-3">
-        <label for="txtPassword" class="form-label">Password</label>
-        <input
-          formControlName="password"
-          type="password"
-          class="form-control"
-          [class.is-invalid]="isFieldInvalid('password')"
-          id="txtPassword"
-        />
-        <div class="invalid-feedback">El campo es requerido</div>
+        <mat-form-field appearance="fill">
+          <mat-label>Password</mat-label>
+          <input type="password" matInput placeholder="******" formControlName="password" required>
+          <mat-error *ngIf="isFieldInvalid('password')">El campo es requerido</mat-error>
+        </mat-form-field>
       </div>
-      <button
-        [disabled]="loginForm.invalid"
-        type="submit"
-        class="btn btn-primary"
-      >
-        Login
-      </button>
+      <div class="row d-flex justify-content-center">
+        <button [disabled]="loginForm.invalid" type="submit" mat-fab extended color="primary">
+          <mat-icon>login</mat-icon>
+          Login
+        </button>
+      </div>
     </form>
   </div>
 </section>
