--- a/src/app/dashboard/components/create-user-form/create-user-form.component.html
+++ b/src/app/dashboard/components/create-user-form/create-user-form.component.html
@@ -82,7 +82,7 @@
   <div class="col-12">
     <mat-form-field appearance="fill" class="full-width">
       <mat-label>Dirección</mat-label>
-      <input matInput placeholder="123 Main St" formControlName="address">
+      <input matInput placeholder="123 Calle San Lorenzo" formControlName="address">
       <mat-error *ngIf="isFieldInvalid('address')">El campo es requerido</mat-error>
     </mat-form-field>
   </div>
