Material Card added

--- a/src/app/auth/pages/login-page/login-page.component.html
+++ b/src/app/auth/pages/login-page/login-page.component.html
@@ -1,7 +1,7 @@
 <section class="min-vh-100 d-flex justify-content-center align-items-center">
-  <div>
+  <div class="shadow-lg p-5 mb-5 bg-body-tertiary rounded">
     <div class="mb-4">
-      <p class="text-primary fw-bold fs-3 text-center">Login</p>
+      <p class="text-primary fw-semibold font-monospace fs-3 text-center">LOGIN</p>
     </div>
     <form (ngSubmit)="login()" [formGroup]="loginForm" autocomplete="off">
       <div class="mb-3">
