--- a/src/app/dashboard/components/create-user-form/create-user-form.component.html
+++ b/src/app/dashboard/components/create-user-form/create-user-form.component.html
@@ -2,6 +2,8 @@
   <app-expansion-panel [pristine]="createForm.pristine"></app-expansion-panel>
 </div>
 
+<mat-divider class="mb-4"></mat-divider>
+
 <form
   (ngSubmit)="createUser()"
   [formGroup]="createForm"
