--- a/src/app/dashboard/pages/home-page/home-page.component.html
+++ b/src/app/dashboard/pages/home-page/home-page.component.html
@@ -1,36 +1,48 @@
 <div class="row">
   <div class="col-md-6">
-    <div class="alert alert-primary" role="alert">
-      <p class="m-0 fw-b fs-6">
-        Buenos días {{ user.name }} {{ user.lastname }}.
-      </p>
-    </div>
+    <mat-card>
+      <mat-card-content>Buenos días {{ user.name }} {{ user.lastname }}.</mat-card-content>
+    </mat-card>
   </div>
   <div class="col-md-6">
     <div class="row row-cols-1 row-cols-lg-2 g-4">
       <div class="col">
-        <div class="card text-bg-primary mb-3">
-          <div class="card-header">Tag</div>
-          <div class="card-body">
-            <h5 class="card-title">Tareas nuevas</h5>
-            <ul class="list-group mt-4">
-              <li class="list-group-item">Crear usuario de Juan</li>
-              <li class="list-group-item">Crear usuario de Pepe</li>
-            </ul>
-          </div>
-        </div>
+        <mat-card>
+          <mat-card-header style="background-color: #3F51B5; color: #fff;">
+            <mat-card-subtitle style="color: #fff;">Tag</mat-card-subtitle>
+            <mat-card-title>Tareas nuevas</mat-card-title>
+          </mat-card-header>
+          <mat-divider></mat-divider>
+          <mat-card-content>
+            <mat-list>
+              <mat-list-item>Maquetar Login</mat-list-item>
+              <mat-divider></mat-divider>
+              <mat-list-item>Diseñar Dashboard</mat-list-item>
+            </mat-list>
+          </mat-card-content>
+          <mat-divider></mat-divider>
+          <mat-card-actions>
+            <button mat-button color="primary">Aceptar</button>
+            <button mat-button color="warn">Rechazar</button>
+          </mat-card-actions>
+        </mat-card>
       </div>
       <div class="col">
-        <div class="card text-bg-warning mb-3">
-          <div class="card-header">Tag</div>
-          <div class="card-body">
-            <h5 class="card-title">Tareas en proceso</h5>
-            <ul class="list-group mt-4">
-              <li class="list-group-item">Dar de baja a usuarios</li>
-              <li class="list-group-item">Dar de baja a Maria</li>
-            </ul>
-          </div>
-        </div>
+        <mat-card>
+          <mat-card-header style="background-color: #3F51B5; color: #fff;">
+            <mat-card-subtitle style="color: #fff;">Tag</mat-card-subtitle>
+            <mat-card-title>Tareas en proceso</mat-card-title>
+          </mat-card-header>
+          <mat-divider></mat-divider>
+          <mat-card-content>
+            <mat-list>
+              <mat-list-item>Maquetar Home Page</mat-list-item>
+              <mat-divider></mat-divider>
+              <mat-list-item>Maquetar 404 Page</mat-list-item>
+            </mat-list>
+          </mat-card-content>
+          <mat-divider></mat-divider>
+        </mat-card>
       </div>
     </div>
   </div>
